--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
       <main class="flex-row justify-space-between"></main>
 
-      <script src="assets/js/homepage.js"></script>
+      <script src="./assets/js/homepage.js"></script>
    </body>
 </html>
